--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "aos": "^2.3.4",
     "emailjs": "^4.0.3",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-player": "^2.16.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
