--- a/package.json
+++ b/package.json
@@ -13,11 +13,17 @@
     "@emailjs/browser": "^4.4.1",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@react-spring/web": "^9.7.5",
+    "@tailwindcss/vite": "^4.0.14",
     "aos": "^2.3.4",
     "emailjs": "^4.0.3",
+    "framer-motion": "^11.18.2",
+    "gsap": "^3.12.7",
+    "ogl": "^1.0.11",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-player": "^2.16.0"
+    "react-player": "^2.16.0",
+    "tailwindcss": "^4.0.14"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
